--- a/BlazorApp1/Pages/Index.cshtml
+++ b/BlazorApp1/Pages/Index.cshtml
@@ -53,7 +53,7 @@
 
         <div>
 
-            <Component1 city="@city" ref="@city.component1_related" />
+            <Component1 city="@city" ref="@city.component1_related"/>
 
         </div>
 
@@ -75,11 +75,24 @@
     </div>
     <div>
         time diff
-        <input bind="@Curr_City.TimeDiff" type="number" min="-12" max="14" placeholder="time diff" />
+        <input bind="@Curr_City.TimeDiff" type="number" min="-12" max="14" />
     </div>
     <div>
         width/height
-        <input bind="@Curr_City.WidthAndHeight" type="number" min="100" max="500" placeholder="WidthAndHeight" />
+        <input bind="@Curr_City.WidthAndHeight" type="number" min="100" max="500" />
+    </div>
+    <div>
+        Timer Interval
+        <input bind="@Curr_City.TimerInterval" type="number" min="1" max="1000" />
+    </div>
+    <div>
+        Fast Mode
+        <input bind="@Curr_City.FastMode" type="checkbox" />
+    </div>
+
+    <div>
+        Fast mode add secconds count
+        <input bind="@Curr_City.FastMode_Increment" type="number" min="1" max="1000" />
     </div>
     <div>
         <button class="btn btn-primary" onclick="@Add_Clock">Add Clock</button>
@@ -97,17 +110,18 @@
 @functions {
 
 
-    bool IsPageLoaded = false;
+            bool IsPageLoaded = false;
 
 
 
 
-    City Curr_City = new City();
+            City Curr_City = new City();
 
 
-    List<City> Cities_List = new List<City>() {
-  new City() { ID=1, Name = "New York", WidthAndHeight = 400, TimeDiff=-5},
-  new City() { ID=2, Name = "Tbilisi", WidthAndHeight = 400, TimeDiff=3},
+            List<City> Cities_List = new List<City>() {
+  new City() { ID=1, Name = "New York", WidthAndHeight = 400, TimeDiff=-5,
+      DivClass ="position:relative; width:400px; height:400px;"},
+ // new City() { ID=2, Name = "Tbilisi", WidthAndHeight = 400, TimeDiff=3},
  // new City() { ID=3, Name = "London", WidthAndHeight = 400, TimeDiff=1},
 };
 
@@ -121,31 +135,46 @@
 
     void Add_Clock()
     {
-        if (Cities_List.Any())
+        if (Cities_List.Count==5)
         {
-            Curr_City.ID = Cities_List.Max(x => x.ID) + 1;
+            JsInterop.Alert("You can't add more than 5 clocks!");
+            return;
+        }
+
+        if (string.IsNullOrEmpty(Curr_City.Name))
+        {
+            JsInterop.Alert("City name is required!");
         }
         else
         {
-            Curr_City.ID = 1;
 
+
+
+            if (Cities_List.Any())
+            {
+                Curr_City.ID = Cities_List.Max(x => x.ID) + 1;
+            }
+            else
+            {
+                Curr_City.ID = 1;
+
+            }
+
+            if (Curr_City.WidthAndHeight == 0)
+            {
+                Curr_City.WidthAndHeight = 300;
+
+            }
+
+            Curr_City.DivClass = "position:relative; width:" + Curr_City.WidthAndHeight + "px; height:" + Curr_City.WidthAndHeight + "px;";
+
+
+            Cities_List.Add(Curr_City);
+            Curr_City = new City();
+
+
+            this.StateHasChanged();
         }
-
-        if (Curr_City.WidthAndHeight == 0)
-        {
-            Curr_City.WidthAndHeight = 300;
-
-        }
-
-
-        Cities_List.Add(Curr_City);
-        Curr_City = new City();
-
-
-
-
-
-        this.StateHasChanged();
     }
 
 
@@ -182,7 +211,7 @@
 
     void RemoveCity(City c)
     {
-      
+
         Cities_List.Remove(c);
         this.StateHasChanged();
 
