--- a/BlazorLib1/Component1.cshtml
+++ b/BlazorLib1/Component1.cshtml
@@ -6,13 +6,13 @@
 @*<br />*@
 
 <h2>@CurrentTime</h2>
-@*<h5>@city.ID</h5>
+<h5>@city.ID</h5>
 
 <h5>@city.CanvasID</h5>
 <p>Current count: @currentCount</p>
 
 <p>log2: @_log2 </p>
-<p>log: @_log </p>*@
+<p>log: @_log </p>
 
 
 
