--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -13,6 +13,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="RawHTML">
+                <span class="oi oi-plus" aria-hidden="true"></span> Raw HTML
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="Counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Updates history
             </NavLink>
