--- a/BlazorApp1/Pages/RawHTML.cshtml
+++ b/BlazorApp1/Pages/RawHTML.cshtml
@@ -4,6 +4,9 @@
 @using BlazorLib3
 
 
+<h5>You can watch 4 mins <a href="https://www.youtube.com/watch?v=KjeL3H04bIU" target="_blank">video demonstration</a></h5>
+
+
 <h4 style="color:blue;">Input Raw html</h4>
 <br />
 <div>
