--- a/BlazorApp1/Pages/RawHTML.cshtml
+++ b/BlazorApp1/Pages/RawHTML.cshtml
@@ -11,6 +11,8 @@
 
 
 <h4 style="color:blue;">Input Raw html</h4>
+
+<h7>It is experimental and probably won't handle all html inputs</h7>
 <br />
 <div>
 
@@ -21,7 +23,7 @@
 
     <button class="btn btn-primary" onclick="@cmd_convert">Run</button>
     <button class="btn btn-primary" onclick="@cmd_clear">Clear</button>
-   
+
 </div>
 
 <br />
