--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -9,7 +9,12 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match=NavLinkMatch.All>
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Clock SVG
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ClockCanvas">
+                <span class="oi oi-plus" aria-hidden="true"></span> Clock Canvas
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -17,7 +22,7 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Raw HTML
             </NavLink>
         </li>
-        <li class="nav-item px-3">
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="Counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Updates history
             </NavLink>
@@ -26,7 +31,7 @@
             <NavLink class="nav-link" href="Fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Todo list
             </NavLink>
-        </li>
+        </li>*@
     </ul>
 </div>
 
