--- a/BlazorApp1/Pages/Index.cshtml
+++ b/BlazorApp1/Pages/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @addTagHelper *, BlazorLib1
-@addTagHelper *, BlazorLib2
+@addTagHelper *, ClockSVGComponent
 @using BlazorLib1
-@using BlazorLib2
+@using ClockSVGComponent
 @using BlazorLib1.Classes
-@using BlazorLib2.Classes
+@using ClockSVGComponent.Classes
 @using Microsoft.AspNetCore.Blazor.Browser.Interop;
 @using Microsoft.AspNetCore.Blazor.Components;
 @using Microsoft.AspNetCore.Blazor.RenderTree;
