--- a/BlazorApp1/Pages/ClockCanvas.cshtml
+++ b/BlazorApp1/Pages/ClockCanvas.cshtml
@@ -2,7 +2,7 @@
 @addTagHelper *, BlazorLib1
 @using BlazorLib1
 @using BlazorLib1.Classes
-@using Microsoft.AspNetCore.Blazor.Browser.Interop;
+@using Microsoft.AspNetCore.Blazor.Browser;
 @using Microsoft.AspNetCore.Blazor.Components;
 @using Microsoft.AspNetCore.Blazor.RenderTree;
 
