--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -18,6 +18,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DoughnutChartpage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Doughnut Chart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="RawHTML">
                 <span class="oi oi-plus" aria-hidden="true"></span> Raw HTML
             </NavLink>
