--- a/BlazorApp1/Shared/MainLayout.cshtml
+++ b/BlazorApp1/Shared/MainLayout.cshtml
@@ -6,7 +6,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="https://github.com/Lupusa87/LupusaBlazorProjects" target="_blank" class="ml-md-auto">Github Repo</a>
+        <a href="https://github.com/Lupusa87" target="_blank" class="ml-md-auto">Github Repos</a>
         <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
     </div>
 
