--- a/BlazorApp1/Pages/CalculatorPage.cshtml
+++ b/BlazorApp1/Pages/CalculatorPage.cshtml
@@ -20,5 +20,9 @@
 
 <br />
 
+<h7>Feel free to <a href="mailto:VakhtangiAbashidze@gmail.com" target="_blank">contact</a> me</h7>
+
+<br>
+
 
 <CompBlazorCalculator></CompBlazorCalculator>
