--- a/BlazorApp1/Shared/MainLayout.cshtml
+++ b/BlazorApp1/Shared/MainLayout.cshtml
@@ -7,6 +7,7 @@
 <div class="main">
     <div class="top-row px-4">
         <a href="https://github.com/Lupusa87" target="_blank" class="ml-md-auto">Github Repos</a>
+        <a href="https://www.youtube.com/playlist?list=PLgZE0RHqetzssd-y1d0jcOwbSPjq2qWPI" target="_blank" class="ml-md-auto">Youtube Channel</a>
         <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
     </div>
 
