--- a/BlazorApp1/Pages/ClockCanvas.cshtml
+++ b/BlazorApp1/Pages/ClockCanvas.cshtml
@@ -1,7 +1,7 @@
 ﻿
-@addTagHelper *, BlazorLib1
-@using BlazorLib1
-@using BlazorLib1.Classes
+@addTagHelper *, BlazorClockCanvasComponent
+@using BlazorClockCanvasComponent
+@using BlazorClockCanvasComponent.Classes
 @using Microsoft.AspNetCore.Blazor.Browser;
 @using Microsoft.AspNetCore.Blazor.Components;
 @using Microsoft.AspNetCore.Blazor.RenderTree;
