--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -18,6 +18,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ChessPage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Game Chess
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="GameSnakePage">
                 <span class="oi oi-plus" aria-hidden="true"></span> Game Snake
             </NavLink>
