--- a/BlazorApp1/Pages/CalculatorPage.cshtml
+++ b/BlazorApp1/Pages/CalculatorPage.cshtml
@@ -1,6 +1,7 @@
-﻿@addTagHelper *, BlazorCalculatorComponent
+﻿@page "/CalculatorPage"
+@addTagHelper *, BlazorCalculatorComponent
 @using BlazorCalculatorComponent;
-@page "/CalculatorPage"
+
 
 <h3 style="color:darkred">This is blazor Calculator</h3>
 <br />
@@ -13,11 +14,6 @@
 <br />
 
 
-
-
-<h7>Feel free to <a href="mailto:VakhtangiAbashidze@gmail.com" target="_blank">contact</a> me</h7>
-
-<br>
 
 
 <CompBlazorCalculator></CompBlazorCalculator>
