--- a/BlazorApp1/Pages/DoughnutChartPage.cshtml
+++ b/BlazorApp1/Pages/DoughnutChartPage.cshtml
@@ -1,11 +1,12 @@
-﻿@addTagHelper *, DoughnutChartComponent
+﻿@page "/DoughnutChartPage"
+@addTagHelper *, DoughnutChartComponent
 @using DoughnutChartComponent;
 @using Microsoft.AspNetCore.Blazor.Browser;
 @using Microsoft.AspNetCore.Blazor.Components;
 @using Microsoft.AspNetCore.Blazor.RenderTree;
 
 
-@page "/DoughnutChartPage"
+
 
 <style>
     .flex-container {
@@ -24,13 +25,7 @@
 </style>
 
 
-<h4>Hello, welcome to my experiment :)</h4>
 
-
-
-
-
-<br>
 
 
 <h3 style="color:darkred">This is <b>Doughtnut</b> chart component</h3>
@@ -41,13 +36,6 @@
 
 
 <br>
-
-
-
-<h7>Feel free to <a href="mailto:VakhtangiAbashidze@gmail.com" target="_blank">contact</a> me</h7>
-
-<br>
-
 
 
 
