--- a/BlazorApp1/Pages/GameSnakePage.cshtml
+++ b/BlazorApp1/Pages/GameSnakePage.cshtml
@@ -1,13 +1,12 @@
-﻿@addTagHelper *, BlazorGameSnakeComponent
+﻿@page "/GameSnakePage"
+@addTagHelper *, BlazorGameSnakeComponent
 @using BlazorGameSnakeComponent;
-@page "/GameSnakePage"
+
 
 <h3 style="color:darkred">This is blazor game - Snake</h3>
 <br />
-<h5 >Use arrows to play, if not runs please refresh page</h5>
+<h5>Use arrows to play, if not runs please refresh page</h5>
 <br />
-<h7>Feel free to <a href="mailto:VakhtangiAbashidze@gmail.com" target="_blank">contact</a> me</h7>
 
-<br>
 
 <CompBlazorGameSnake></CompBlazorGameSnake>
