--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -43,8 +43,18 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="TreeViewPage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Tree View
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="RawHTML">
                 <span class="oi oi-plus" aria-hidden="true"></span> Raw HTML
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DonationPage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Donation
             </NavLink>
         </li>
         @*<li class="nav-item px-3">
