--- a/BlazorApp1/Pages/ClockCanvas.cshtml
+++ b/BlazorApp1/Pages/ClockCanvas.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@page "/ClockCanvas"
 @addTagHelper *, BlazorClockCanvasComponent
 @using BlazorClockCanvasComponent
 @using BlazorClockCanvasComponent.Classes
@@ -7,7 +7,6 @@
 @using Microsoft.AspNetCore.Blazor.RenderTree;
 
 
-@page "/ClockCanvas"
 
 <style>
     .flex-container {
@@ -26,30 +25,10 @@
 </style>
 
 
-<h4>Hello, welcome to my experiment :)</h4>
 
-
-
-
-
-<br>
 
 <h3 style="color:darkred">This is <b>Canvas</b> based Clock</h3>
 
-
-
-
-
-<br>
-
-<h5>My goal is not beauty, good colors and interface is designers job :) My goal is <b>complexity</b>, to touch more aspects of drawing.</h5>
-
-
-<br>
-
-<h6>You can watch youtube <a href="https://www.youtube.com/watch?v=fuZSaYmqgCs&t=7s" target="_blank">video</a> about this project</h6>
-
-<h7>Feel free to <a href="mailto:VakhtangiAbashidze@gmail.com" target="_blank">contact</a> me</h7>
 
 <br>
 
@@ -58,9 +37,9 @@
 
     @foreach (var city in Cities_List)
     {
-        <button type="button" class="close" aria-label="Close" onclick=@(() => RemoveCity(city))>
-            <span aria-hidden="true">&times;</span>
-        </button>
+        @*<button type="button" class="close" aria-label="Close" onclick=@(() => RemoveCity(city))>
+                <span aria-hidden="true">&times;</span>
+            </button>*@
 
         <div>
 
@@ -77,39 +56,39 @@
 
 
 
-<div class="flex-container">
+@*<div class="flex-container">
 
 
-    <div>
-        CityName
-        <input bind="@Curr_City.Name" type="text" placeholder="enter city name" />
-    </div>
-    <div>
-        time diff
-        <input bind="@Curr_City.TimeDiff" type="number" min="-12" max="14" />
-    </div>
-    <div>
-        width/height
-        <input bind="@Curr_City.WidthAndHeight" type="number" min="100" max="500" />
-    </div>
-    <div>
-        Timer Interval
-        <input bind="@Curr_City.TimerInterval" type="number" min="1" max="1000" />
-    </div>
-    <div>
-        Fast Mode
-        <input bind="@Curr_City.FastMode" type="checkbox" />
-    </div>
+        <div>
+            CityName
+            <input bind="@Curr_City.Name" type="text" placeholder="enter city name" />
+        </div>
+        <div>
+            time diff
+            <input bind="@Curr_City.TimeDiff" type="number" min="-12" max="14" />
+        </div>
+        <div>
+            width/height
+            <input bind="@Curr_City.WidthAndHeight" type="number" min="100" max="500" />
+        </div>
+        <div>
+            Timer Interval
+            <input bind="@Curr_City.TimerInterval" type="number" min="1" max="1000" />
+        </div>
+        <div>
+            Fast Mode
+            <input bind="@Curr_City.FastMode" type="checkbox" />
+        </div>
 
-    <div>
-        Fast mode add secconds count
-        <input bind="@Curr_City.FastMode_Increment" type="number" min="1" max="1000" />
-    </div>
-    <div>
-        <button class="btn btn-primary" onclick="@Add_Clock">Add Clock</button>
-    </div>
+        <div>
+            Fast mode add secconds count
+            <input bind="@Curr_City.FastMode_Increment" type="number" min="1" max="1000" />
+        </div>
+        <div>
+            <button class="btn btn-primary" onclick="@Add_Clock">Add Clock</button>
+        </div>
 
-</div>
+    </div>*@
 
 
 
@@ -125,7 +104,7 @@ City Curr_City = new City();
 
 
 List<City> Cities_List = new List<City>() {
-new City() { ID=1, Name = "New York", WidthAndHeight = 400, TimeDiff=-5,
+new City() { ID=1, Name = "New York", WidthAndHeight = 400, TimeDiff=0,
 DivClass ="position:relative; width:400px; height:400px;"},
 // new City() { ID=2, Name = "Tbilisi", WidthAndHeight = 400, TimeDiff=3},
 // new City() { ID=3, Name = "London", WidthAndHeight = 400, TimeDiff=1},
