--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -38,6 +38,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="LoanCalculatorPage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Loan Calculator
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="PasswordPatternPage">
                 <span class="oi oi-plus" aria-hidden="true"></span> Password Pattern
             </NavLink>
