--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -28,6 +28,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="PaintPage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Paint
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="DoughnutChartpage">
                 <span class="oi oi-plus" aria-hidden="true"></span> Doughnut Chart
             </NavLink>
