--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -48,6 +48,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ExcelPage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Excel
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="PasswordPatternPage">
                 <span class="oi oi-plus" aria-hidden="true"></span> Password Pattern
             </NavLink>
