--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -68,6 +68,16 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DedicatedWebWorkerPage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Dedicated Web Worker
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="SharedWebWorkerPage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Shared Web Worker
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="RawHTML">
                 <span class="oi oi-plus" aria-hidden="true"></span> Raw HTML
             </NavLink>
